# stm32f411_usbasp_programmer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: devcontainer.json
.openocd/: jlink.cfg
.podman/: Dockerfile  build-image.sh  run-container.sh
cmake/: common_lib_settings.cmake  stm32f411ceu6.cmake  tinyusb.cmake  toolchain-arm-none-eabi-gcc.cmake
include/: board_spi.h  tusb_config.h  uart_dma.h  uid.h  usb_descriptors.h
lib/: CMakeLists.txt
lib/avr_devices/: CMakeLists.txt  avr_devices_isr.c  avr_devices_isr.h
lib/avr_spi/: CMakeLists.txt  avr_spi.c  avr_spi.h
lib/delay/: CMakeLists.txt  delay.c  delay.h
lib/hw_spi/: CMakeLists.txt  hw_spi.c  hw_spi.h
lib/sw_spi/: CMakeLists.txt  sw_spi.c  sw_spi.h
lib/usbasp/: CMakeLists.txt  usbasp_dispatch.c  usbasp_dispatch.h  usbasp_handle.c  usbasp_handle.h
src/: basic.stm32.ld  main.c  retarget.c  uart_dma.c  uid.c  usb_callbacks.c  usb_descriptors.c
uf2/: uf2conv.py
